--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,39 @@
-version: '3'
+version: '3.8'
+
 services:
-  postgres:
-    image: 'postgres:9.6.1'
+  api:
+    container_name: docker_api
+    build:
+      context: .
+      target: development
+    volumes:
+      - .:/app
+     
     ports:
-      - '5432:5432'
+      - "${API_PORT}:${API_PORT}"
+    env_file:
+      - .env
+    networks:
+      - backend
+    depends_on:
+      - postgres
+
+  postgres:
+    container_name: docker_db
+    image: postgres:13-alpine
+    networks:
+      - backend
     environment:
-      POSTGRES_USER: 'test'
-      POSTGRES_PASSWORD: 'test'
-      POSTGRES_DB: 'test'
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "${PG_HOST_PORT}:${PG_PORT}"
+    volumes:
+      - api_db_data:/var/lib/postgresql/data
+
+networks:
+  backend:
+
+volumes:
+  api_db_data:
